--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>新規ユーザー作成</h1>
+  <%= form_with model: @user, local: true do |f| %>
+    <div class='field'>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+    </div>
+    <div class='field'>
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+    </div>
+    <div class='field'>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
+    </div>
+    
+    <%= f.submit %>
+  <% end %>
