--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,15 @@
 <h1>新規ユーザー作成</h1>
   <%= form_with model: @user, local: true do |f| %>
     <div class='field'>
-      <%= f.label :name %>
+      <%= f.label :name, "名前" %>
       <%= f.text_field :name %>
     </div>
     <div class='field'>
-      <%= f.label :password %>
+      <%= f.label :password, "パスワード" %>
       <%= f.password_field :password %>
     </div>
     <div class='field'>
-      <%= f.label :password_confirmation %>
+      <%= f.label :password_confirmation, "パスワード確認" %>
       <%= f.password_field :password_confirmation %>
     </div>
     
