--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Sales#index</h1>
-<p>Find me in app/views/sales/index.html.erb</p>
+<%= link_to '売上を追加', new_score_path %>
+<%= month_calendar scores: @scores do |date, scores| %>
+  <%= date.day %>
+<% end %>
