--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,4 +1,9 @@
 <%= link_to '売上を追加', new_score_path %>
-<%= month_calendar scores: @scores do |date, scores| %>
+<%= month_calendar(attribute: :date, events: @scores) do |date, scores| %>
   <%= date.day %>
+  <% scores.each do |score| %>
+    <div>
+      <%= score.score %>
+    </div>
+  <% end %>
 <% end %>
