fix: 売上追加フォームの日付をdatetimeからdateに修正

--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -9,7 +9,7 @@
 
     <div class="time">
     <%= f.label :date %>
-    <%= f.datetime_select :date %>
+    <%= f.date_select :date %>
   </div>
 
   <div class="content">
