fix: フォームのカラム名を修正

--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -8,8 +8,8 @@
   </div>
 
     <div class="time">
-    <%= f.label :date %>
-    <%= f.date_select :date %>
+    <%= f.label :start_time %>
+    <%= f.date_select :start_time %>
   </div>
 
   <div class="content">
