add: 月度の合計を表示する機能を追加

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,5 +1,5 @@
 <%= link_to '売上を追加', new_score_path %>
-<%= month_calendar(attribute: :date, events: @scores) do |date, scores| %>
+<%= month_calendar events: @scores do |date, scores| %>
   <%= date.day %>
   <% scores.each do |score| %>
     <div>
