--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Sales#show</h1>
-<p>Find me in app/views/sales/show.html.erb</p>
+<h1><%= @score.created_at %></h1>
+<h2><%= Time.current %></h2>
