--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -30,4 +30,6 @@
       <% end %>
     </tbody>
   </table>
+  <div><%= "#{start_date.month}月度の合計: #{@scores_in_previous_month.sum { |hash| hash[:score] }}"  %></div>
+  <div><%= "#{start_date.next_month.month}月度の合計: #{@scores_in_next_month.sum { |hash| hash[:score] }}"  %></div>
 </div>
