add: カレンダーに売上詳細へのリンクを追加

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -3,7 +3,7 @@
   <%= date.day %>
   <% scores.each do |score| %>
     <div>
-      <%= score.score %>
+      <%= link_to score.score, score_path(score) %>
     </div>
   <% end %>
 <% end %>
