add: 売上の詳細ページ(仮)を追加

--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -1,2 +1,3 @@
-<h1><%= @score.created_at %></h1>
-<h2><%= Time.current %></h2>
+<div><%= @score.start_time.to_date %></div>
+<div><%= @score.score %></div>
+<div><%= @score.memo %></div>
