--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,13 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="container">
     <% if logged_in? %>
-    <%= render 'shared/header'%>
+      <%= render 'shared/header'%>
     <% else %>
-    <%= render 'shared/before_login_header' %>
+      <%= render 'shared/before_login_header' %>
     <% end %>
-    <%= render 'shared/flash_message' %>
+      <%= render 'shared/flash_message' %>
     <%= yield %>
   </body>
 </html>
