--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,11 +1,13 @@
-<div class="container">
-  <%= link_to '売上を追加', new_score_path, {class: "btn btn-primary"} %>
-  <%= month_calendar events: @scores do |date, scores| %>
-    <%= date.day %>
-    <% scores.each do |score| %>
-      <div>
-        <%= link_to score.score, score_path(score) %>
-      </div>
+<div class="row">
+  <div class="col">
+    <%= link_to '売上を追加', new_score_path, {class: "btn btn-primary"} %>
+    <%= month_calendar events: @scores do |date, scores| %>
+      <%= date.day %>
+      <% scores.each do |score| %>
+        <div>
+          <%= link_to "#{score.score}円", score_path(score) %>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
