--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -31,7 +31,7 @@
     </tbody>
   </table>
   <div class="calculated_scores">
-    <%= "#{start_date.month}月度の合計: #{@scores_in_previous_month.sum { |hash| hash[:score] }}"  %><br>
-    <%= "#{start_date.next_month.month}月度の合計: #{@scores_in_next_month.sum { |hash| hash[:score] }}"  %>
+    <%= "#{start_date.month}月度の合計: #{@scores_in_previous_month.sum { |hash| hash[:score] }} 円" %><br>
+    <%= "#{start_date.next_month.month}月度の合計: #{@scores_in_next_month.sum { |hash| hash[:score] }} 円" %>
   </div>
 </div>
