add: 月度の範囲外の日付を黒く表示するスタイルを追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,9 +36,11 @@
 
   .start-date {}
 
-  .prev-month {}
+  .prev-month {
+    background: rgba(150, 150, 150, 0.736);
+  }
   .next-month {
-    color: black;
+    background: rgba(150, 150, 150, 0.736);
   }
   .current-month {}
 
