improve: 月度範囲外の売上へのリンクをグレーに変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,10 +38,16 @@
 
   .prev-month {
     background: rgba(150, 150, 150, 0.736);
+    a {
+      color: rgb(58, 56, 56);
+    }
   }
   .next-month {
     background: rgba(150, 150, 150, 0.736);
     color: black;
+    a {
+      color: rgb(58, 56, 56);
+    }
   }
   .current-month {}
 
