--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -2,10 +2,10 @@
   <div class="col">
     <%= link_to '売上を追加', new_score_path, {class: "btn btn-primary"} %>
     <%= SimpleCalendar::CustomLengthCalendar.new(self, {events: @scores}).render do |date, scores| %>
-      <%= date.strftime('%m/%d') %>
+      <%= date.strftime('%-m/%-d') %>
       <% scores.each do |score| %>
         <div>
-          <%= link_to "#{score.score}円", score_path(score) %>
+          <%= link_to "#{score.score}", score_path(score) %>
         </div>
       <% end %>
     <% end %>
