fix: view内のタグを修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,2 +1,4 @@
-<%= current_user.name %>
-<%= link_to 'ログアウト', logout_path, method: :delete %>
+<div class="header">
+  <%= current_user.name %>
+  <%= link_to 'ログアウト', logout_path, method: :delete %>
+</div>
