--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -33,3 +33,4 @@
   <div class="calculated_scores">
     <%= "#{date_range.last.month}月度の合計: #{@scores_in_current_month.sum { |hash| hash[:score] }} 円" %>
   </div>
+</div>
