--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,6 +1,7 @@
-<div class="row">
+<main class="row">
   <div class="col">
-    <%= link_to '売上を追加', new_score_path, {class: "btn btn-primary"} %>
+    <button class="btn btn-primary" id="js-toggle-button">▼ 売上追加</button>
+    <%= render('form', score: @score) %>
     <%= SimpleCalendar::CustomLengthCalendar.new(self, {events: @scores}).render do |date, scores| %>
       <%= date.strftime('%-m/%-d') %>
       <% scores.each do |score| %>
@@ -10,5 +11,5 @@
       <% end %>
     <% end %>
   </div>
-</div>
+</main>
 
