improve: ヘッダーにプルダウンを実装

--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -6,6 +6,12 @@
   display: none;
 }
 
+.dropdown-custom.dropdown-menu {
+  position: absolute;
+  left: initial;
+  right: 0;
+}
+
 .simple-calendar {
   .day {}
 
