--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,14 @@
-<div class="header">
-  <%= current_user.name %>
-  <%= link_to 'ログアウト', logout_path, method: :delete %>
-</div>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <h1 class="navbar-brand">売上管理</h1>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link fas fa-user-circle fa-2x" href="#" data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id='header-profile'></a>
+        <div class="dropdown-custom dropdown-menu dropdown-menu-right dropdown-slide">
+          <p class="dropdown-item"><%= current_user.name %></p>
+          <%= link_to 'ログアウト', logout_path, method: :delete, class: 'dropdown-item' %>
+        </div>
+      </li>
+    </ul>
+  </nav>
+</header>
