fix: classの命名にアンダーバーとハイフンが混在していたので、ハイフンに統一

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,6 +1,6 @@
 <main class="row">
   <div class="col">
-    <div class="new_score_form">
+    <div class="new-score-form">
       <button class="btn btn-primary" id="js-toggle-button">▼ 売上追加</button>
       <%= render('form', score: @score) %>
     </div>
