--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -31,13 +31,13 @@
     </tbody>
   </table>
 </div>
-<div class="score_details row">
-  <div class="calculated_scores col-6">
+<div class="score-details row">
+  <div class="calculated-scores col-6">
     <h3><%= t('date.month_names')[date_range.last.month] + '度' %></h3>
     <%= "合計: #{@scores_in_current_month.sum { |hash| hash[:score] }} 円" %><br>
     <%= "平均: 円" %>
   </div>
-  <div class="js-searched_score_field col-6">
+  <div class="js-searched-score-field col-6">
     <h3>詳細</h3>
   </div>
 </div>
