--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,20 @@
-<h1>新規ユーザー作成</h1>
-  <%= form_with model: @user, local: true do |f| %>
-    <div class='field'>
-      <%= f.label :name, "名前" %>
-      <%= f.text_field :name %>
-    </div>
-    <div class='field'>
-      <%= f.label :password, "パスワード" %>
-      <%= f.password_field :password %>
-    </div>
-    <div class='field'>
-      <%= f.label :password_confirmation, "パスワード確認" %>
-      <%= f.password_field :password_confirmation %>
-    </div>
-    
-    <%= f.submit %>
-  <% end %>
+<div class="form-page text-center">
+  <main class="form-area">
+    <h1>新規ユーザー登録</h1>
+    <%= form_with model: @user, local: true do |f| %>
+      <div class="form-group">
+        <%= f.text_field :name, placeholder: "ユーザーネーム", class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.password_field :password, placeholder: "パスワード", class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.password_field :password_confirmation, placeholder: "パスワード確認", class: "form-control" %>
+      </div>
+
+      <%= f.submit class: "btn btn-lg btn-primary" %>
+    <% end %>
+  </main>
+</div>
