--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,10 @@
       </div>
 
       <div class="form-group">
+        <%= f.email_field :email, placeholder: "メールアドレス", class: "form-control" %>
+      </div>
+
+      <div class="form-group">
         <%= f.password_field :password, placeholder: "パスワード", class: "form-control" %>
       </div>
 
