--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,11 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="container-xl">
-    <% if logged_in? %>
-      <%= render 'shared/header'%>
-    <% else %>
-      <%= render 'shared/before_login_header' %>
-    <% end %>
+  <% if logged_in? %>
+    <%= render 'shared/header'%>
+  <% end %>
+  <div class="container-xl">
     <%= render 'shared/flash_message' %>
     <%= yield %>
-  </body>
+  </div>
 </html>
