add: ログインページへのリンクを追加

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,5 +20,6 @@
 
       <%= f.submit class: "btn btn-lg btn-primary" %>
     <% end %>
+    <%= link_to "ログインページへ", login_path %>
   </main>
 </div>
