--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="form-group row">
     <%= f.label :score, class: "col-2 col-md-1" %>
-    <%= f.text_field :score, class:'form-control col-4', placeholder: '円' %>
+    <%= f.number_field :score, class:'form-control col-4', placeholder: '円' %>
   </div>
 
   <div class="form-group row">
