add: フラッシュメッセージを編集

--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg container-xl invisible">
     <h1 class="navbar-brand">売上管理</h1>
   </nav>
 </header>
