--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -34,8 +34,8 @@
 <div class="score-details row">
   <div class="calculated-scores col-6">
     <h3><%= t('date.month_names')[date_range.last.month] + '度' %></h3>
-    <%= "合計: #{total_scores_in_current_month(@scores_in_current_month)} 円" %><br>
-    <%= "平均: #{total_scores_in_current_month(@scores_in_current_month) / @scores_in_current_month.size} 円" %>
+    <%= "合計: #{total_score_in_current_month(@scores_in_current_month)} 円" %><br>
+    <%= "平均: #{average_score_in_current_month(@scores_in_current_month)} 円" %>
   </div>
   <div class="js-searched-score-field col-6">
     <h3>詳細</h3>
