add: navbar-brandの位置を調整

--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -10,6 +10,12 @@ body {
   height: 100%;
 }
 
+.navbar {
+  .navbar-brand {
+    margin: auto auto auto 8px;
+  }
+}
+
 .flash-messages {
   width: max-content;
   margin: auto;
