improve: ログインフォームのスタイルを調整

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="form-page text-center">
+<div class="form-page text-center signup-page">
   <main class="form-area">
     <h1>新規ユーザー登録</h1>
     <%= form_with model: @user, local: true do |f| %>
