--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -137,12 +137,17 @@ body {
 }
 
 .score-details {
+  position: relative;
+  top: 3vh;
   word-break:break-all;
   font-size: 1.2rem;
   h3 {
     font-size: 1.4rem;
     font-weight: normal;
     border-bottom: solid 2px rgb(0, 179, 255);
+  }
+  p {
+    margin-bottom: 0;
   }
 }
 
@@ -177,6 +182,7 @@ body {
   .score-details {
     position: relative;
     top: -3vh;
+    font-size: 1rem;
     h3 {
       font-size: 1.2rem;
       font-weight: normal;
