--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light container-xl">
-    <h1 class="navbar-brand">売上管理</h1>
+    <h1 class="navbar-brand"><%= link_to "売上管理", root_path %></h1>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
         <a class="nav-link fas fa-user-circle fa-2x" href="#" data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id='header-profile'></a>
