--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_with(model: score, class: 'js-new-score-form', local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
+
   <div class="form-group row">
-    <%= f.label :start_time, class: "col-2 col-md-1" %>
-    <%= f.date_select :start_time, {}, {class: 'form-control', style: 'display: inline-block;width: auto;'} %>
+    <%= f.hidden_field :start_time, :value => set_value_of_start_time(start_date, date) %>
   </div>
 
   <div class="form-group row">
