--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -5,11 +5,11 @@
       <span class="calendar-title"><%= t('date.month_names')[date_range.last.month] + '度' %> <%= date_range.last.year %></span>
       <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
     </div>
-      <%= form_with url: scores_searches_path, method: :get, class: "col-6", local: true do |f| %>
+      <%= form_with url: scores_searches_path, method: :get, class: "jump-form col-6", style: "display:inline-flex", local: true do |f| %>
         <div class="form-group">
           <%= f.date_select :selected_month, {discard_day: true, use_month_numbers: true, selected: start_date}, {class: 'form-control', style: 'display: inline-block;width: auto;'} %>
+          <%= f.submit "Go", class: "btn btn-primary" %>
         </div>
-        <%= f.submit "Go", class: "btn btn-primary" %>
       <% end %>
   </div>
 
