--- a/app/views/scores/searches/_score_detail.html.erb
+++ b/app/views/scores/searches/_score_detail.html.erb
@@ -2,14 +2,13 @@
   <% if @searched_score.nil? %>
     <p>日付: <%= params[:date] %></p>
     <div class="new-score-form">
-      <button class="btn btn-primary" id="js-toggle-button">▼ 売上追加</button>
       <%= render partial: 'scores/form', locals: { score: @score, start_date: start_date, date: date } %>
     </div>
   <% else %>
     <p>日付: <%= params[:date] %></p>
     <p>売上: <%= @searched_score.score %> 円</p>
     <p>メモ: <%= @searched_score.memo %></p>
-    <%= link_to score_path(@searched_score), method: :delete, class: "delete-button" do %>
+    <%= link_to score_path(@searched_score), method: :delete, data: { confirm: '売上を削除しますか？' }, class: "delete-button" do %>
       <span class="far fa-trash-alt"></span>
     <% end %>
   <% end %>
