--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -1,19 +1,19 @@
-<%= form_with(model: score, class: 'js-new-score-form', local: true) do |f| %>
+<%= form_with(model: score, local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <div class="form-group row">
+  <div class='form-group'>
     <%= f.hidden_field :start_time, :value => set_value_of_start_time(start_date, date) %>
   </div>
 
-  <div class="form-group row">
-    <%= f.label :score, class: "col-2 col-md-1" %>
-    <%= f.number_field :score, class:'form-control col-4', placeholder: '円' %>
+  <div class='form-group text-left'>
+    <%= f.label :score, class: 'new-score-label' %>
+    <%= f.number_field :score, class:'form-control', placeholder: '円' %>
   </div>
 
-  <div class="form-group row">
-    <%= f.label :memo, class: "col-2 col-md-1" %>
-    <%= f.text_area :memo, class:'form-control col-6', rows: 2 %>
+  <div class='form-group text-left'>
+    <%= f.label :memo, class: 'new-score-label' %>
+    <%= f.text_area :memo, class:'form-control', rows: 2 %>
   </div>
 
-  <%= f.submit nil, class: 'btn btn-primary' %>
+  <%= f.submit nil, class: 'btn btn-primary submit-new-score' %>
 <% end %>
