--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -40,10 +40,14 @@
   </table>
 </div>
 <div class="score-details row">
-  <div class="calculated-scores col-6">
+  <div class="calculated-score-field col-6">
     <h3><%= t('date.month_names')[date_range.last.month] + '度' %></h3>
-    <p><%= "合計: #{total_score_in_current_month(@scores_in_current_month)} 円" %></p>
-    <p><%= "平均: #{average_score_in_current_month(@scores_in_current_month)} 円" %></p>
+    <div class="calculated-score">
+      <p>合計:</p> <p class="calculated-result"><%= "#{total_score_in_current_month(@scores_in_current_month)} 円" %></p>
+    </div>
+    <div class="calculated-score">
+      <p>平均:</p> <p class="calculated-result"><%= "#{average_score_in_current_month(@scores_in_current_month)} 円" %></p>
+    </div>
   </div>
   <div class="js-searched-score-field col-6">
     <h3>詳細</h3>
