--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
       <li class="nav-item dropdown">
         <a class="nav-link fas fa-user-circle fa-2x" href="#" data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id='header-profile'></a>
         <div class="dropdown-custom dropdown-menu dropdown-menu-right dropdown-slide">
-          <p class="dropdown-item"><%= current_user.name %></p>
+          <%= link_to "#{current_user.name}", user_path(@user), class: "dropdown-item" %>
           <%= link_to 'ログアウト', logout_path, method: :delete, class: 'dropdown-item' %>
         </div>
       </li>
