--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 
 @import "bootstrap";
 @import "simple_calendar";
+@import "common";
 @import "scores";
 @import "font-awesome-sprockets";
 @import "font-awesome";
