--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -7,7 +7,7 @@
 
   <div class='form-group text-left'>
     <%= f.label :score, class: 'new-score-label' %>
-    <%= f.number_field :score, class:'form-control', placeholder: '円' %>
+    <%= f.number_field :score, class:'form-control', value: "", placeholder: '円' %>
   </div>
 
   <div class='form-group text-left'>
