fix: score-detailという名前は別で使うので名前を変更

--- a/app/assets/stylesheets/scores.scss
+++ b/app/assets/stylesheets/scores.scss
@@ -62,7 +62,7 @@
   }
 }
 
-.score-details {
+.score-status {
   position: relative;
   top: 3vh;
   word-break:break-all;
@@ -123,7 +123,7 @@
     }
   }
 
-  .score-details {
+  .score-status {
     position: relative;
     top: -3vh;
     font-size: 1rem;
