--- a/app/views/simple_calendar/_custom_length_calendar.html.erb
+++ b/app/views/simple_calendar/_custom_length_calendar.html.erb
@@ -39,7 +39,7 @@
     </tbody>
   </table>
 </div>
-<div class="score-details row">
+<div class="score-status row">
   <div class="calculated-score-field col-6">
     <h3><%= t('date.month_names')[date_range.last.month] + '度' %></h3>
     <div class="calculated-score">
