--- a/app/views/scores/searches/_searched_score_field.html.erb
+++ b/app/views/scores/searches/_searched_score_field.html.erb
@@ -11,3 +11,9 @@
       <span class="far fa-trash-alt"></span>
     <% end %>
   <% end %>
+  <%= form_with url: check_scores_searches_path, method: :get, local: true do %>
+    <input name="start_date" type="hidden" value="<%= start_date %>">
+    <input name="date" type="hidden" value="<%= params[:date] %>">
+    <%= button_tag '日報作成', type: 'submit', class: 'btn btn-success', method: :get %>
+  <% end %>
+</div>
