--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/error_messages', object: f.object %>
 
   <div class='form-group'>
-    <%= f.hidden_field :start_time, :value => set_value_of_start_time(start_date, date) %>
+    <%= f.hidden_field :start_time, value: start_time %>
   </div>
 
   <div class='form-group text-left'>
